syntax = "proto3";

option csharp_namespace = "GrpcNotification";

package notification;

service Notification {
    rpc AddNotification (NotificationRequest) returns (NotificationResponse) {}
}

message NotificationRequest {
    string message = 1;
    uint32 duration = 2;
}

message NotificationResponse {
    string notification_id = 1;
}
